package ar.edu.unsa.tp2_ej7;

/**
 * Enum que representa las especialidades médicas disponibles en urgencias.
 */
public enum Especialidad {
    FAMILIA,
    TRAUMATOLOGIA,
    PEDIATRIA,
    INTERNISTA,
    OTORRINO
}
