package ar.edu.unsa.tp2_ej7;

/**
 * Enum que representa el estado inicial de un paciente al ingresar a urgencias.
 */
public enum EstadoPaciente {
    GRAVE,
    MEDIO,
    LEVE
}
